ng2-components/ng2-activiti-form/src/components/widgets/container/container.widget.scss
@import 'theming';

.adf {
    .container-widget, .container-widget__header {
    }

    .container-widget__header-text {
        border-bottom: 1px solid rgba(0, 0, 0, 0.87);
        margin-left: 10px;
        margin-right: 10px;
        cursor: default;
        user-select: none;
        -webkit-user-select: none;
        /* Chrome/Safari/Opera */
        -moz-user-select: none;
        /* Firefox */
        -ms-user-select: none;
        /* IE/Edge */
        -webkit-touch-callout: none;
        /* iOS Safari */
        &.collapsible {
            cursor: pointer;
        }
    }
}

md-input-container {
    width: 95%;
}

md-grid-tile {
    display: block;
    position: absolute;
    overflow: visible !important;
}

